--- a/public/embcss.css
+++ b/public/embcss.css
@@ -240,11 +240,6 @@ i {
     color: black;
 }
 
-.contact-form {
-    text-align: center;
-    margin-top: 20px;
-}
-
 .tasks {
     text-align: center;
 }
@@ -434,3 +429,38 @@ body {
         width: 47.5%;
     }
 }
+
+.contact {
+    text-align: center;
+}
+
+input[type=text], select, textarea {
+    width: 50%; 
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px;
+    resize: vertical 
+  }
+  
+  input[type=submit] {
+    background-color: black;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #333333;
+    cursor: pointer;
+  }
+  
+  container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
