--- a/public/weather.css
+++ b/public/weather.css
@@ -13,6 +13,7 @@ body {
     background: linear-gradient(rgb(47,150,163), rgb(48,62,143));
     font-family: 'Montserrat', sans-serif;
     color: white;
+    overflow: hidden;
 }
 
 img {
